data/derived/sp14/progs/unify/prog3657.ml.out
Characters 221-235:
  let args = List.rev (List.combine(0::l1, 0::l2)) in
                                   ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
